--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mustache": "^4.2.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
