--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
     "@babel/preset-react": "^7.24.7",
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.6.0",
+    "prettier": "^3.3.2",
     "webpack": "^5.92.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
+  },
+  "scripts": {
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\""
   }
 }
